force-app/main/default/objects/Duty_Free_Sales__c/Duty_Free_Sales__c.object-meta.xml
<CustomObject>
    <label>Duty Free Sales</label>
    <nameField>
        <displayFormat>DFS-{0000000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duty Free Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>