force-app/main/default/objects/Duty_Free_Sales__c/fields/Category_of_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Feedback__c</fullName>
    <label>Category of Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loading Error</fullName>
            </value>
            <value>
                <fullName>Flaws/Malfunction</fullName>
            </value>
            <value>
                <fullName>Bar Code Incomplete</fullName>
            </value>
            <value>
                <fullName>Cannot Perform Duty Free Sales</fullName>
            </value>
            <value>
                <fullName>Unload</fullName>
            </value>
            <value>
                <fullName>Malfunction</fullName>
            </value>
            <value>
                <fullName>Crew Feedback</fullName>
            </value>
            <value>
                <fullName>Cannot Finish Duty Free Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>