force-app/main/default/objects/Duty_Free_Sales__c/fields/Crew_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Crew_Feedback__c</fullName>
    <label>Crew Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>