force-app/main/default/objects/Duty_Free_Sales__c/fields/Customer_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_Number__c</fullName>
    <label>Customer Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>