force-app/main/default/objects/Duty_Free_Sales__c/fields/Iss_for_can_t_Peform_Finish_P_O_Sales__c.field-meta.xml
<CustomField>
    <fullName>Iss_for_can_t_Peform_Finish_P_O_Sales__c</fullName>
    <label>Iss. for can&apos;t Peform/Finish P.O. Sales</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loading Quantity</fullName>
            </value>
            <value>
                <fullName>Show on PIL, but not loaded</fullName>
            </value>
            <value>
                <fullName>Ordered but did not show on PIL</fullName>
            </value>
            <value>
                <fullName>Customer No-Show</fullName>
            </value>
            <value>
                <fullName>No Willingness</fullName>
            </value>
            <value>
                <fullName>Lack of Time</fullName>
            </value>
            <value>
                <fullName>Weather/Turbulence</fullName>
            </value>
            <value>
                <fullName>Abnormal Operation</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>