force-app/main/default/objects/Duty_Free_Sales__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <label>Item Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>