force-app/main/default/objects/Duty_Free_Sales__c/fields/Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Item_Quantity__c</fullName>
    <label>Item Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>