force-app/main/default/objects/Duty_Free_Sales__c/fields/POS_Malfunction_Reason__c.field-meta.xml
<CustomField>
    <fullName>POS_Malfunction_Reason__c</fullName>
    <label>POS Malfunction Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broken</fullName>
            </value>
            <value>
                <fullName>No Power</fullName>
            </value>
            <value>
                <fullName>Unable to sense barcode/QR Code</fullName>
            </value>
            <value>
                <fullName>Credit Card Payment Abnormal</fullName>
            </value>
            <value>
                <fullName>Cannot Print Papers(Completely)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>