force-app/main/default/objects/Duty_Free_Sales__c/fields/POS_No__c.field-meta.xml
<CustomField>
    <fullName>POS_No__c</fullName>
    <label>POS No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>