force-app/main/default/objects/Duty_Free_Sales__c/fields/Reason_for_Unable_to_Perform_Finish_DFS__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Unable_to_Perform_Finish_DFS__c</fullName>
    <label>Reason for Unable to Perform/Finish DFS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lack of Time</fullName>
            </value>
            <value>
                <fullName>Weather/Turbulence</fullName>
            </value>
            <value>
                <fullName>Abnormal Operation</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Insufficient Quantity</fullName>
                <isActive>false</isActive>
                <label>Insufficient Quantity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>